--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
     </nav>
-    <h1>Contact Us</h1>
-    
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
