--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     </div>
 </nav>
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('{{url_for('static', filename='img/home-bg.jpg')}}')">
+<header class="masthead" style="background-image: url('https://i.pinimg.com/564x/8e/88/8c/8e888c9f35c0a1c18dfdb5698176cb6a.jpg')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
