--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
+    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet"  type="text/css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}" type="text/css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css"/>
+
     <title>Hello, Flask</title>
 </head>
 <body>
@@ -75,15 +77,21 @@
                         </a>
                     </li>
                 </ul>
-                <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website <span id="copyright"></span></div>
             </div>
         </div>
     </div>
 </footer>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
+<script>
+    $("#copyright").text(new Date().getFullYear());
+</script>
 
 </body>
 </html>
