--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {{ company [1]["name"] }}
+
 
 <h2>{{ page_title }}</h2>
 <p>The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
@@ -11,73 +11,18 @@
     also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from rash action. The
     superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned to leave on other
     business, welcomed a fourteenth to fill into their party.</p>
-<div class="row featurette">
-    <div class="col-md-7">
-        <h3>Thorin Oakenshield</h3>
-        <p>Thorin II was born in TA 2746 to the Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
-            youth, Thorin and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug, in TA
-            2770. While in exile, he quickly grew into a capable warrior. This was demonstrated at the Battle of
-            Azanulbizar, near Moria, in TA 2799. He fought with one of the Dwarven armies beneath Moria's East-gate, and
-            at some point in the battle, his shield broke, and, using an oaken tree branch found on the ground as a
-            shield, he gained the epithet "Oakenshield," which remained with him even in death.</p>
-    </div>
-    <div class="col-md-5">
-        <img src="https://static.wikia.nocookie.net/lotr/images/7/76/Orcrist-Sword-of-Thorin-Oakenshield.jpg" alt="">
-    </div>
-</div>
-<div class="row featurette">
-    <div class="col-md-5">
-        <img src="https://static.wikia.nocookie.net/lotr/images/d/dd/Fili_and_Kili_at_Bag_End.jpg" alt="">
-    </div>
-    <div class="col-md-7">
-        <h3>Fíli and Kíli</h3>
-        <p>Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother, Dís. They were also nephews
-            of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing feature was his
-            long nose, the longest of any of the Dwarves in Thorin's company.</p>
-    </div>
-</div>
-<div class="row featurette">
-    <div class="col-md-7">
-        <h3>Óin</h3>
-        <p>Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. Óin's uncle was Fundin,
-            the
-            father of Balin and Dwalin.
-            Óin fought in the Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined Thorin's
-            company on
-            the quest to reclaim the Lonely Mountain, wearing a brown hood.[2] Óin was one of the Dwarves who bet that
-            Bilbo
-            would come along with them to reclaim the Lonely Mountain. Óin and his brother Glóin were usually in charge
-            of
-            preparing the fire for the Company, as they were the most skilled of the group. He fought in and survived
-            the
-            Battle of Five Armies, and later settled in the Lonely Mountain with King Dáin II Ironfoot, along with many
-            other Dwarves of the company of Thorin.</p>
-    </div>
-    <div class="col-md-5">
-        <img src="https://static.wikia.nocookie.net/lotr/images/4/4b/Oinstaff.jpg" alt="">
-    </div>
+
+{% for member in company %}
     <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/8/8d/Gandalf-2.jpg" alt="">
-        </div>
         <div class="col-md-7">
-            <h3>Gandalf</h3>
-            <p>Originally called Olórin, he was accounted as the wisest of the Maiar. He was created by Ilúvatar before
-                the Music of the Ainur,[1] and was at the beginning of Time amongst the Ainur who entered into Eä.[2] In
-                his "youth" he became one of the Maiar who served Manwë, Varda, Irmo, and Nienna. He was associated with
-                light and fire, much like Varda, yet his ways often took him to Nienna, from whom he learned pity and
-                patience. He loved the Elves, but walked unseen among them, or wore the guise of an Elf, and sent them
-                fair visions in their hearts that made them wiser. Throughout his life he followed the example of
-                Nienna, talking pity on the sorrows of the Children of Ilúvatar and drawing those who listened to him
-                out of despair.
-                When the Valar decided to send the Istari (also called Wizards) to Middle-earth to counsel and assist
-                all those who opposed the Dark Lord Sauron, Manwë and Varda included Olórin among the five to be sent.
-                At first, Olórin was nervous and described himself as too weak and afraid of Sauron. Manwë understood,
-                and told Olórin that such was a reason why he should go, to overcome that fear. Furthermore, the One
-                Ring, containing much of Sauron's power, presumably still existed somewhere. Thus, Manwë insisted that
-                Olórin should go as the third, but Varda convinced him to send Olórin as the second instead.[4] He
-                agreed, and prepared for Olórin's departure from the Undying Lands with the other four, arriving about
-                the same time that the Necromancer appeared in Mirkwood.</p>
+            <h3>{{ member.name }}</h3>
+            <p>{{ member.description }}</p>
+        </div>
+        <div class="col-md-5">
+            <img src="{{ member.image_source}}" alt="" class="featurette-image image-responsive">
         </div>
     </div>
-    {% endblock %}
+    <hr class="featurette-devider">
+{% endfor %}
+
+{% endblock %}
