--- a/templates/about.html
+++ b/templates/about.html
@@ -13,14 +13,17 @@
     business, welcomed a fourteenth to fill into their party.</p>
 
 {% for member in company %}
+
     <div class="row featurette">
-        <div class="col-md-7">
-            <h3>{{ member.name }}</h3>
-            <p>{{ member.description }}</p>
-        </div>
-        <div class="col-md-5">
-            <img src="{{ member.image_source}}" alt="" class="featurette-image image-responsive">
-        </div>
+        {% if loop.index % 2 != 0 %}
+            <div class="col-md-7">
+                <h3>{{ loop.index }} .{{ member.name }}</h3>
+                <p>{{ member.description }}</p>
+            </div>
+            <div class="col-md-5">
+                <img src="{{ member.image_source}}" alt="" class="featurette-image image-responsive">
+            </div>
+        {% endif %}
     </div>
     <hr class="featurette-devider">
 {% endfor %}
