--- a/templates/member.html
+++ b/templates/member.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <img src="{{ member.image_source}}" alt=" Profila image for {{ member.name}}">
+            <img src="{{ member.image_source}}" alt=" Profil image for {{ member.name}}">
             <h2 class="col-md-7">{{member.name}}</h2>
         </div>
     </div>
